Fix font-size on small devices

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -22,13 +22,13 @@ header.default
 
     #headline
         color:          $white 
-        font-size:      2.5em
         margin:         -10vh 0 0 0
         opacity:        0
         width:          100%
 
         h1
             font-family: $content-family
+            font-size:   3vw
             font-weight: 200
             text-shadow: 0 0 0.5em #000,  0 0 0.5em #000
             text-transform: none
@@ -36,3 +36,10 @@ header.default
 header.post a.logo > img
     height:             $dim-smallRow
     padding:            0.25em
+
+@media(max-width: 480px)
+    header.default #headline h1
+        font-size:  6vw
+    
+
+
